# bankingSystem

./: .gitignore  CMakeLists.txt  GUI.session.sql  HI.session.sql  README.md  bankingSystemDatabase.session.sql  bankingSystemDatabase_sql_queries  local_database.session.sql  main  main.cpp  online_database.session.sql  tasks.json  try  try.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
GUI/: CMakeLists.txt  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h
GUI/src/: build.sh  build_and_run.sh.gpg  build_run.sh  configure.sh  run.sh
GUI/src/.qt/: QtDeploySupport.cmake
GUI/src/adm_window/: CMakeLists.txt  adm_database.cpp  adm_main.cpp  adm_main_window.cpp  adm_main_window.h
GUI/src/adm_window/adm_option/: CMakeLists.txt  adm_option_main.cpp  adm_option_main_window.cpp  adm_option_main_window.h
GUI/src/app/: CMakeLists.txt  database.cpp  database.h  main.cpp  main_window.cpp  main_window.h  ressource.qrc
GUI/src/app/build1/.qt/: QtDeploySupport.cmake
GUI/src/app/build1/.qt/deploy_qml_imports/: MyQtProject.cmake
GUI/src/app/build1/src/adm_window/adm_library_autogen/: deps
GUI/src/app/build1/src/adm_window/adm_option/adm_option_library_autogen/: deps
GUI/src/app/build1/src/adm_window/adm_option/adm_option_library_autogen/EWIEGA46WW/: moc_adm_option_main_window.cpp
GUI/src/app/build1/src/app/.qt_plugins/: Qt6_QmlPlugins_Imports_MyQtProject.rsp
GUI/src/app/build1/src/app/MyQtProject_autogen/: deps  mocs_compilation.cpp
GUI/src/app/build1/src/client_window/client_library_autogen/: deps
GUI/src/app/build1/src/client_window/option/edit_forget/edit_forget_library_autogen/: deps
GUI/src/app/build1/src/client_window/option/edit_forget/edit_forget_library_autogen/EWIEGA46WW/: moc_edit_forget_main_window.cpp
GUI/src/app/build1/src/client_window/option/option_library_autogen/: deps  moc_predefs.h
GUI/src/client_window/: CMakeLists.txt  client_database.cpp  client_main.cpp  client_main_window.cpp  client_main_window.h
GUI/src/client_window/client_option/: CMakeLists.txt  client_option_main.cpp  client_option_main_window.cpp  client_option_main_window.h
GUI/src/client_window/option/: CMakeLists.txt  option_main.cpp  option_main_window.cpp  option_main_window.h
GUI/src/client_window/option/edit_forget/: CMakeLists.txt  edit_forget_main.cpp  edit_forget_main_window.cpp  edit_forget_main_window.h
GUI/src/database/: CMakeLists.txt  database.cpp  database.h
GUI/src/info_window/: CMakeLists.txt  info_main.cpp  info_main_window.cpp  info_main_window.h
GUI/src/login_window/: CMakeLists.txt  login_main.cpp  login_window.cpp  login_window.h
GUI/src/main/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
GUI/src/main/.qt/: QtDeploySupport.cmake
GUI/src/ressources/: withdraw.avif
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
